# polymarket-copy-bot

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: backtest_overlap.py  backtest_thematic.py
src/: config.py  db.py  executor.py  logger.py  main.py  models.py  position_sizer.py  risk_manager.py  signal_engine.py  wallet_monitor.py
tests/: test_position_sizer.py  test_signal_engine.py
