[project]
name = "polymarket-copy-bot"
version = "0.1.0"
description = "Basket copy-trading bot for Polymarket — follows top wallets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "requests>=2.31",
]

[project.scripts]
copytrade = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
